Fixing some alignment errors in Header and Navbar sections

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
   font-family: Inter, sans-serif;
 }
 
-.App {
-  margin: 0;
+.container-fluid {
   padding: 0;
 }
