--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,4 +1,5 @@
 .navbar-nav {
+  display: flex;
   justify-content: flex-end;
   padding: 20px;
 }
